log
Tue Apr 14 11:18:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:44: error: expected expression before ‘)’ token
   48 |     HashMap *map = (HashMap*)malloc(sizeof())
      |                                            ^
hashmap.c:48:14: error: unused variable ‘map’ [-Werror=unused-variable]
   48 |     HashMap *map = (HashMap*)malloc(sizeof())
      |              ^~~
hashmap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
58bd8e3
Tue Apr 14 11:19:34 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: expected ‘,’ or ‘;’ before ‘return’
   49 |     return NULL;
      |     ^~~~~~
hashmap.c:48:14: error: unused variable ‘map’ [-Werror=unused-variable]
   48 |     HashMap *map = (HashMap*)malloc(sizeof(HashMap))
      |              ^~~
hashmap.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
52769a3
Tue Apr 14 11:22:32 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:5: error: expected ‘,’ or ‘;’ before ‘if’
   49 |     if (map == NULL)return;
      |     ^~
hashmap.c:51:8: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘Pair’
   51 |     map->Pair = (Pai **)
      |        ^~
hashmap.c:51:18: error: ‘Pai’ undeclared (first use in this function); did you mean ‘Pair’?
   51 |     map->Pair = (Pai **)
      |                  ^~~
      |                  Pair
hashmap.c:51:18: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:51:24: error: expected expression before ‘)’ token
   51 |     map->Pair = (Pai **)
      |                        ^
hashmap.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
0479bca
